--- a/Project.toml
+++ b/Project.toml
@@ -71,7 +71,7 @@ HTTP = "0.8, 0.9, 1"
 ImageView = "0.10, 0.11"
 Images = "0.23, 0.24, 0.25"
 Ipopt = "0.6, 0.7, 0.8, 0.9, 1"
-JSServe = "1"
+JSServe = "1, 2"
 JuMP = "0.21, 0.22, 1"
 LazySets = "1, 2"
 Luxor = "2.10, 3"
