--- a/Project.toml
+++ b/Project.toml
@@ -65,17 +65,17 @@ Distributions = "0.24, 0.25"
 FileIO = "1.4"
 Format = "1.3"
 ForwardDiff = "0.10"
-GLMakie = "0.4, 0.5, 0.6, 0.7"
+GLMakie = "0.4, 0.5, 0.6, 0.7, 0.8"
 GeometryBasics = "0.3, 0.4"
 HTTP = "0.8, 0.9, 1"
 ImageView = "0.10, 0.11"
 Images = "0.23, 0.24, 0.25"
 Ipopt = "0.6, 0.7, 0.8, 0.9, 1"
-JSServe = "1"
+JSServe = "1, 2"
 JuMP = "0.21, 0.22, 1"
 LazySets = "1, 2"
 Luxor = "2.10, 3"
-Makie = "0.15, 0.16, 0.17, 0.18"
+Makie = "0.15, 0.16, 0.17, 0.18, 0.19"
 MeshIO = "0.4"
 NLopt = "0.6"
 Optim = "1.2"
@@ -92,7 +92,7 @@ SpecialFunctions = "2"
 StaticArrays = "1.0"
 StringEncodings = "0.3"
 Unitful = "1.6"
-WGLMakie = "0.4, 0.6, 0.7"
+WGLMakie = "0.4, 0.6, 0.7, 0.8"
 ZipFile = "0.9, 0.10"
 Zygote = "0.6"
 julia = "1.5.2"
