CompatHelper: add new compat entry for DelimitedFiles at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -61,6 +61,7 @@ ColorTypes = "0.10, 0.11"
 Colors = "0.12"
 Conda = "1.5"
 DataFrames = "0.22, 1.0"
+DelimitedFiles = "1"
 Distributions = "0.24, 0.25"
 FileIO = "1.4"
 Format = "1.3"
