CompatHelper: bump compat for Images to 0.26, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -70,7 +70,7 @@ GLMakie = "0.4, 0.5, 0.6, 0.7, 0.8"
 GeometryBasics = "0.3, 0.4"
 HTTP = "0.8, 0.9, 1"
 ImageView = "0.10, 0.11"
-Images = "0.23, 0.24, 0.25"
+Images = "0.23, 0.24, 0.25, 0.26"
 Ipopt = "0.6, 0.7, 0.8, 0.9, 1"
 JSServe = "1, 2"
 JuMP = "0.21, 0.22, 1"
