--- a/Project.toml
+++ b/Project.toml
@@ -84,7 +84,7 @@ PackageCompiler = "1.2, 2"
 Plots = "1.10"
 Pluto = "0.12, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19"
 PlutoUI = "0.7"
-Polynomials = "2.0, 3"
+Polynomials = "2.0, 3, 4"
 PyCall = "1.92"
 ReverseDiff = "1.7"
 Revise = "3"
