CompatHelper: bump compat for NLopt to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -77,7 +77,7 @@ LazySets = "1, 2"
 Luxor = "2.10, 3"
 Makie = "0.15, 0.16, 0.17, 0.18, 0.19"
 MeshIO = "0.4"
-NLopt = "0.6"
+NLopt = "0.6, 1"
 Optim = "1.2"
 PackageCompiler = "1.2, 2"
 Plots = "1.10"
