--- a/Project.toml
+++ b/Project.toml
@@ -69,7 +69,7 @@ ForwardDiff = "0.10"
 GLMakie = "0.4, 0.5, 0.6, 0.7, 0.8"
 GeometryBasics = "0.3, 0.4"
 HTTP = "0.8, 0.9, 1"
-ImageView = "0.10, 0.11"
+ImageView = "0.10, 0.11, 0.12"
 Images = "0.23, 0.24, 0.25, 0.26"
 Ipopt = "0.6, 0.7, 0.8, 0.9, 1"
 JSServe = "1, 2"
