CompatHelper: add new compat entry for Statistics at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -90,6 +90,7 @@ Revise = "3"
 Roots = "1, 2"
 SpecialFunctions = "2"
 StaticArrays = "1.0"
+Statistics = "1"
 StringEncodings = "0.3"
 Unitful = "1.6"
 WGLMakie = "0.4, 0.6, 0.7, 0.8"
