CompatHelper: add new compat entry for Statistics at version 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -92,6 +92,7 @@ Roots = "1, 2"
 SHA = "0.7"
 SpecialFunctions = "2"
 StaticArrays = "1.0"
+Statistics = "1"
 StringEncodings = "0.3"
 Unitful = "1.6"
 WGLMakie = "0.4, 0.6, 0.7, 0.8"
