--- a/Project.toml
+++ b/Project.toml
@@ -76,7 +76,7 @@ JSServe = "1, 2"
 JuMP = "0.21, 0.22, 1"
 LazySets = "1, 2"
 Luxor = "2.10, 3"
-Makie = "0.15, 0.16, 0.17, 0.18, 0.19"
+Makie = "0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
 MeshIO = "0.4"
 NLopt = "0.6, 1"
 Optim = "1.2"
