--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ repository = "https://github.com/microsoft/OpticSim.jl"
 version = "0.6.0"
 
 [deps]
+Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
@@ -23,7 +24,6 @@ ImageView = "86fae568-95e7-573e-a6b2-d8a6b900c9ef"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
-JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
@@ -72,7 +72,6 @@ HTTP = "0.8, 0.9, 1"
 ImageView = "0.10, 0.11, 0.12"
 Images = "0.23, 0.24, 0.25, 0.26"
 Ipopt = "0.6, 0.7, 0.8, 0.9, 1"
-JSServe = "1, 2"
 JuMP = "0.21, 0.22, 1"
 LazySets = "1, 2"
 Luxor = "2.10, 3"
