--- a/Project.toml
+++ b/Project.toml
@@ -66,7 +66,7 @@ Distributions = "0.24, 0.25"
 FileIO = "1.4"
 Format = "1.3"
 ForwardDiff = "0.10"
-GLMakie = "0.4, 0.5, 0.6, 0.7, 0.8, 0.9"
+GLMakie = "0.9"
 GeometryBasics = "0.3, 0.4"
 HTTP = "0.8, 0.9, 1"
 ImageView = "0.10, 0.11, 0.12"
@@ -75,7 +75,7 @@ Ipopt = "0.6, 0.7, 0.8, 0.9, 1"
 JuMP = "0.21, 0.22, 1"
 LazySets = "1, 2"
 Luxor = "2.10, 3"
-Makie = "0.15, 0.16, 0.17, 0.18, 0.19, 0.20"
+Makie = "0.20"
 MeshIO = "0.4"
 NLopt = "0.6, 1"
 Optim = "1.2"
@@ -94,7 +94,7 @@ StaticArrays = "1.0"
 Statistics = "1"
 StringEncodings = "0.3"
 Unitful = "1.6"
-WGLMakie = "0.4, 0.6, 0.7, 0.8, 0.9"
+WGLMakie = "0.9"
 ZipFile = "0.9, 0.10"
 Zygote = "0.6"
 julia = "1.5.2"
