Revert "Remove SHA from compat"
This reverts commit 9a8d8f46a450a6800a6e29a7ecc3ed101aac64d2.

--- a/Project.toml
+++ b/Project.toml
@@ -88,6 +88,7 @@ PyCall = "1.92"
 ReverseDiff = "1.7"
 Revise = "3"
 Roots = "1, 2"
+SHA = "0.7"
 SpecialFunctions = "2"
 StaticArrays = "1.0"
 Statistics = "1"
