remove unnecessary dependencies

--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -12,4 +12,4 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-Documenter = "< 0.27"
+Documenter = "1"
