removed GlassCat in preparation for using AGFFileReader
removed various package dependencies

--- a/Project.toml
+++ b/Project.toml
@@ -5,8 +5,7 @@ repository = "https://github.com/microsoft/OpticSim.jl"
 version = "0.6.0"
 
 [deps]
-Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
-CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+AGFFileReader = "36dd7d7d-c279-4b5c-a024-2ba417cea492"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
@@ -28,11 +27,8 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Luxor = "ae8d54c2-7ccd-5906-9d76-62fc9837b5bc"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
-PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
-PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
@@ -43,11 +39,9 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
-ZipFile = "a5390f91-8eb1-5f08-bee0-b1d1ffed6cea"
-Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-CSV = "0.8, 0.9, 0.10"
+AGFFileReader = "1.0.0"
 ColorSchemes = "3.10"
 ColorTypes = "0.10, 0.11"
 Colors = "0.12"
@@ -66,10 +60,7 @@ LazySets = "1, 2"
 Luxor = "2.10, 3"
 Makie = "0.21"
 MeshIO = "0.4"
-PackageCompiler = "1.2, 2"
 Plots = "1.10"
-Pluto = "0.12, 0.14, 0.15, 0.16, 0.17, 0.18, 0.19"
-PlutoUI = "0.7"
 Polynomials = "2.0, 3, 4"
 Roots = "1, 2"
 SHA = "0.7"
@@ -79,6 +70,4 @@ Statistics = "1"
 StringEncodings = "0.3"
 Unitful = "1.6"
 WGLMakie = "0.10"
-ZipFile = "0.9, 0.10"
-Zygote = "0.6"
 julia = "1.11"
