fixed HologramInterface to use parametric types for all glasses
removed multiholograminterface benchmark since this type doesn't work correctly yet.
made benchmarks into a testitem. Probably don't want it this way eventually.

sarted working on making Vis standalone

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,7 @@ src/GlassCat/data/jl/
 !src/GlassCat/data/jl/OTHER.jl
 *.agf
 
-# Don't track sysimage file: dll on windows, so on linux
-*.dll
-*.so
-
+*.csv
 
 ## VisualStudioCode.gitignore ##
 
