--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.6.0"
 
 [deps]
 AGFFileReader = "36dd7d7d-c279-4b5c-a024-2ba417cea492"
+
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
@@ -21,7 +22,8 @@ StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-AGFFileReader = "1"
+AGFFileReader = "1.1.2"
+AllocCheck = "0.2.1"
 Colors = "0.13.0"
 
 [extras]
@@ -30,6 +32,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+AllocCheck = "9b6a8646-10ed-4001-bbdc-1d2f46dfbb1a"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -37,4 +40,4 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["FiniteDifferences", "Images", "Plots", "StableRNGs", "Suppressor", "Test", "TestItemRunner", "TestItems", "Colors", "BenchmarkTools"]
+test = ["FiniteDifferences", "Images", "Plots", "StableRNGs", "Suppressor", "Test", "TestItemRunner", "TestItems", "Colors", "BenchmarkTools","AllocCheck"]
