--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ src/GlassCat/data/jl/
 # Don't track sysimage file: dll on windows, so on linux
 *.dll
 *.so
-
+*.csv
 
 ## VisualStudioCode.gitignore ##
 
