--- a/Project.toml
+++ b/Project.toml
@@ -25,10 +25,12 @@ AGFFileReader = "1"
 Colors = "0.13.0"
 
 [extras]
+Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
 Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
@@ -37,4 +39,4 @@ TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
 TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
 [targets]
-test = ["FiniteDifferences", "Images", "Plots", "StableRNGs", "Suppressor", "Test", "TestItemRunner", "TestItems", "Colors", "BenchmarkTools"]
+test = ["FiniteDifferences", "Images", "Plots", "StableRNGs", "Suppressor", "Test", "TestItemRunner", "TestItems", "Colors", "BenchmarkTools","Aqua","JET"]
