updated compats to fix errors

--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,21 @@ StringEncodings = "69024149-9ee7-55f6-a4c4-859efe599b68"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
-AGFFileReader = "1"
+AGFFileReader = "1.1"
+DataFrames = "1.7"
+Distributions = "0.25"
+GeometryBasics = "0.5"
+LazySets = "3.1"
+MeshIO = "0.5"
+SpecialFunctions = "2.5"
+StaticArrays = "1.9"
+Statistics = "1.11"
+StringEncodings = "0.3"
+Unitful = "1.22"
+InteractiveUtils = "1.11"
+LinearAlgebra = "1.11"
+Random = "1.11"
+julia = "1.11"
 Colors = "0.13.0"
 JET = "0.9"
 
