--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,8 @@ version = "0.7.0"
 
 [deps]
 AGFFileReader = "36dd7d7d-c279-4b5c-a024-2ba417cea492"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
@@ -14,7 +16,9 @@ JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
 LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
+OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
@@ -23,22 +27,26 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 AGFFileReader = "1.1"
+BenchmarkTools = "1.6.0"
+Colors = "0.13.0"
+Crayons = "4.1.1"
 DataFrames = "1.7"
 Distributions = "0.25"
 GeometryBasics = "0.5"
+InteractiveUtils = "1.11"
+JET = "0.9"
 LazySets = "3.1"
+LinearAlgebra = "1.11"
 MeshIO = "0.5"
+OhMyREPL = "0.5.29"
+Random = "1.11"
+Revise = "3.7.5"
 SpecialFunctions = "2.5"
 StaticArrays = "1.9"
 Statistics = "1.11"
 StringEncodings = "0.3"
 Unitful = "1.22"
-InteractiveUtils = "1.11"
-LinearAlgebra = "1.11"
-Random = "1.11"
 julia = "1.11"
-Colors = "0.13.0"
-JET = "0.9"
 
 [extras]
 Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
