--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
 OhMyREPL = "5fb14364-9ced-5910-84b2-373655c76a03"
+PrettyPrint = "8162dcfd-2161-5ef2-ae6c-7681170c5f98"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
@@ -39,6 +40,7 @@ LazySets = "3.1"
 LinearAlgebra = "1.11"
 MeshIO = "0.5"
 OhMyREPL = "0.5.29"
+PrettyPrint = "0.2.0"
 Random = "1.11"
 Revise = "3.7.5"
 SpecialFunctions = "2.5"
