--- a/Project.toml
+++ b/Project.toml
@@ -4,10 +4,12 @@ authors = ["Brian Guenter", "Charlie Hewitt", "Ran Gal", "Alfred Wong"]
 repository = "https://github.com/microsoft/OpticSim.jl"
 version = "0.7.1"
 
+[workspace]
+projects = ["OpticSim","test"]
+
 [deps]
 AGFFileReader = "36dd7d7d-c279-4b5c-a024-2ba417cea492"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 GeometryBasics = "5c1252a2-5f33-56bf-86c9-59e7332b4326"
@@ -28,13 +30,11 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 [compat]
 AGFFileReader = "1.1"
 BenchmarkTools = "1.6.0"
-Colors = "0.13.0"
-Crayons = "4.1.1"
 DataFrames = "1.7"
 Distributions = "0.25"
 GeometryBasics = "0.5"
 InteractiveUtils = "1.11"
-JET = "0.9"
+JET = "0.11"
 LazySets = "3.1"
 LinearAlgebra = "1.11"
 MeshIO = "0.5"
@@ -46,21 +46,6 @@ StaticArrays = "1.9"
 Statistics = "1.11"
 StringEncodings = "0.3"
 Unitful = "1.22"
-julia = "1.11"
+julia = "1.12"
 
-[extras]
-Aqua = "4c88cf16-eb10-579e-8560-4a9242c79595"
-BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
-Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
-FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
-Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
-JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
-StableRNGs = "860ef19b-820b-49d6-a774-d7a799459cd3"
-Suppressor = "fd094767-a336-5f1f-9728-57cf17d0bbfb"
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-TestItemRunner = "f8b46487-2199-4994-9208-9a1283c18c0a"
-TestItems = "1c621080-faea-4a02-84b6-bbd5e436b8fe"
 
-[targets]
-test = ["FiniteDifferences", "Images", "Plots", "StableRNGs", "Suppressor", "Test", "TestItemRunner", "TestItems", "Colors", "BenchmarkTools", "Aqua", "JET"]
