--- a/.github/workflows/Documentation.yml
+++ b/.github/workflows/Documentation.yml
@@ -1,39 +1,36 @@
 name: Documentation
+
 on:
   push:
-    branches: [main, 'docs/**', 'tnd/**']
-    tags: ['*']
+    branches: [main] # update to match your development branch (master, main, dev, trunk, ...)
+    tags: '*'
   pull_request:
+
 jobs:
   build:
-    name: Documentation
+    # These permissions are needed to:
+    # - Deploy the documentation: https://documenter.juliadocs.org/stable/man/hosting/#Permissions
+    # - Delete old caches: https://github.com/julia-actions/cache#usage
+    permissions:
+      actions: write
+      contents: write
+      pull-requests: read
+      statuses: write
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+      - uses: julia-actions/setup-julia@v2
         with:
-          fetch-depth: 0
-      - uses: julia-actions/setup-julia@latest
-        with:
-          version: '1.12'
+          version: '1'
+      - uses: julia-actions/cache@v2
       - name: Install dependencies
+        shell: julia --color=yes --project=docs {0}
         run: |
-          xvfb-run julia --project=docs/ -e '
-            using Pkg
-            # GITHUB_REF is like "refs/tags/vX.Y.Z" for tag builds
-            ref = get(ENV, "GITHUB_REF", "")
-            if startswith(ref, "refs/tags/")
-              tag = replace(ref, "refs/tags/" => "")
-              # Install the released/tagged version from the repo at this tag
-              Pkg.add(PackageSpec(url="https://github.com/brianguenter/OpticSim.jl.git", rev=tag))
-            else
-              # Use the local checkout as dev for branch/PR builds
-              Pkg.develop(PackageSpec(path=pwd()))
-            end
-            Pkg.instantiate()
-            Pkg.build()
-          '
-      - name: Build and deploy to gh-pages branch
+          using Pkg
+          Pkg.develop(PackageSpec(path=pwd()))
+          Pkg.instantiate()
+      - name: Build and deploy
+        run: julia --color=yes --project=docs docs/make.jl
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
-        run: xvfb-run julia --project=docs/ docs/make.jl
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # If authenticating with GitHub Actions token
+          DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }} # If authenticating with SSH deploy key
